Fixed shadow always being visible  on scrollbar

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -249,7 +249,7 @@ body {
     height: 100%;
     background: rgba(255, 255, 255, 0.7); /* Semi-transparent white */
     backdrop-filter: blur(10px);
-    box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: none !important;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -261,6 +261,7 @@ body {
 /* Active Class (Menu Slides In) */
 .mobile-menu.menu-open {
     right: 0;
+    box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2) !important;
 }
 
 /* Mobile Menu Links */
